<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="topping">Topping</string>
    <string name="thank_you">thank you!</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="order_summary_name">"Name: "<xliff:g example="Amy" id="Name">%s</xliff:g></string>
    <string name="order_whipped_cream">Add Whipped Cream? <xliff:g id="whipped">%b</xliff:g></string>
    <string name="order_chocolate">Add Chocolate? <xliff:g id="chocolate">%b</xliff:g></string>
    <string name="order_quantity">Quantity: <xliff:g id="quantity">%d</xliff:g></string>
    <string name="order_total">Total: <xliff:g id="message">%d</xliff:g></string>
    <string name="order_summary_email_subject">JustJava order for<xliff:g id="name">%s</xliff:g></string>
</resources>
